--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -1030,7 +1030,8 @@ select{
     left: 87.6%;
 }
 .logonname{
-    color:white;
+    /*color:white;*/
+    color: #5c5c5c;
     top: 6%;
     left: 91%;
     position: absolute;
@@ -1043,7 +1044,12 @@ select{
     left: 89%;
 }
 .loginname a{
-    color:white;
+    /*color:white;
+    top: 2%;
+    left: 91%;
+    position: absolute;*/
+    color: #5c5c5c;
+    font-weight: 700;
     top: 2%;
     left: 91%;
     position: absolute;
@@ -1051,6 +1057,12 @@ select{
 .bgthead{
         /*background-color:#d6e9c6 !important;*/
          background-color:#f6c1b5 !important;
+ }
+.bgthead-blue{
+        /*background-color:#8ba5b7 !important;*/
+        background-color:rgba(139, 165, 183, 0.40) !important;
+        /*color:#333333;*/
+         /*background-color:#daddff !important;*/
  }
 .bgfont-12{
     font-size: 12px; 
@@ -1144,6 +1156,13 @@ select{
     /*background: linear-gradient(to bottom, #686666 , #2e2e2e);*/
     /*background-color: #558381;*/
     background-color: #7f6d7b;
+}
+.barattach-blue {
+    margin-top: 0px;
+    width: 100%;
+    height: 40px;
+    /*background-color: #5baa8c;*/
+    background-color: #4b7490;
 }
 .barattach{
     margin-top: 0px;
