--- a/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
@@ -20,7 +20,7 @@
                 <table class="table table-striped">
                     <thead class="bgthead">
                         <tr>
-                            <th>No.</th>
+                            <th class="hidecolumn">No.</th>
                             <th class="hidecolumn">ID</th>
                             <th>Menu</th>
                             <th>View</th>
